# QJSONConfig

./: README.md
.github/workflows/: test.yml
QJSONConfig/: TODO.md  qjsonconfig.cpp  qjsonconfig.h
demo/: CMakeLists.txt  main.cpp
